<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddSocioActivity"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <EditText
            android:id="@+id/edNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/añadir_socio_nombre"
            />
        <CheckBox
            android:id="@+id/cbPagado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/pagado"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btnAceptar"
            android:layout_marginTop="16dp"
            android:layout_width="400px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/guardar"/>

    </LinearLayout>
</layout>