<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation = "vertical">

        <EditText
            android:id="@+id/eTextNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nombre socio"
            android:layout_margin="16dp"
            />

        <LinearLayout
            android:id="@+id/filtersLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:checked="true"
                android:id="@+id/tbPagado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pagado"
                android:textSize="8pt"
                android:layout_marginHorizontal="16dp"
                />

            <EditText
                android:id="@+id/etNumero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:hint="@string/introduce_numero_socio"
                android:inputType="number"
                android:layout_marginEnd="16dp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btnsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/botonBuscar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buscar"
                android:layout_marginHorizontal="40dp"
                android:onClick="FiltrarSocios"
                android:layout_weight="0.6"
                />

            <Button
                android:id="@+id/botonAñadir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/añadir_socio"
                android:layout_marginHorizontal="40dp"
                android:onClick="AbrirAñadirSocio"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <ListView
            android:id="@+id/lvLista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</layout>